--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 Django==1.6.5
 Pillow==2.4.0
 gunicorn==18.0
+httplib2==0.9
+oauth2==1.5.211
+oauthlib==0.6.3
+python-openid==2.2.5
+python-social-auth==0.1.26
+requests==2.3.0
+requests-oauthlib==0.4.1
+six==1.7.3
 sorl-thumbnail==11.12
 wsgiref==0.1.2
